src/cluster-mgmt/src/cli/apps/cpingmesh/cping-agent-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cping-agent
  namespace: cpingmesh
spec:
  selector:
    matchLabels:
      app: cping-agent
  template:
    metadata:
      labels:
        app: cping-agent
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: "k8s.cerebras.com/node-role-management"
                    operator: DoesNotExist
                  - key: "k8s.cerebras.com/node-role-coordinator"
                    operator: DoesNotExist
      containers:
      - name: cping-agent
        image: registry.local/${CPING_AGENT_TAG}
        ports:
          - name: http-metrics
            containerPort: 19992
        resources:
          limits:
            memory: "96M"
            cpu: "120m"
            rdma/hca_devices: "1"
          requests:
            cpu: "50m"
            memory: "64M"
        args:
        - -c
        - "$(CONTROLLER_ADDR)"
        - -m
        - "$(MAX_CLIENT_INTERFACES)"
        - -p
        - "$(METRICS_BIND_ADDR)"
        - -r
        - "$(METRICS_RESET_INTERVAL_MS)"
      terminationGracePeriodSeconds: 5
      hostNetwork: true
      dnsPolicy: "ClusterFirstWithHostNet"
