src/cluster-mgmt/src/cli/apps/cpingmesh/cping-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cping-controller
  namespace: cpingmesh
  labels:
    app: cping-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cping-controller
  template:
    metadata:
      labels:
        app: cping-controller
    spec:
      serviceAccountName: cping-controller-sa
      containers:
      - name: cping-controller
        image: registry.local/${CPING_CONTROLLER_TAG}
        ports:
        - name: grpc
          containerPort: 50052
        - name: rest
          containerPort: 8000
        - name: http-metrics
          containerPort: 50054
        args: [${CPING_CONTROLLER_ARGS}]
        resources:
          limits:
            memory: "256M"
            cpu: "200m"
          requests:
            cpu: "100m"
            memory: "128M"
      nodeSelector:
        "node-role.kubernetes.io/control-plane": ""
      tolerations:
        - effect: NoSchedule
          key: "node-role.kubernetes.io/master"
          operator: Equal
          value: ""
        - effect: NoSchedule
          key: "node-role.kubernetes.io/control-plane"
          operator: Equal
          value: ""
      terminationGracePeriodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: cping-controller-svc
  namespace: cpingmesh
spec:
  selector:
    app: cping-controller
  ports:
    - protocol: TCP
      name: cping-controller-grpc
      port: 50052
      targetPort: 50052
    - protocol: TCP
      name: cping-controller-rest
      port: 50053
      targetPort: 8000
    - protocol: TCP
      name: cping-controller-metrics
      port: 50054
      targetPort: 50054
  type: ClusterIP
